# MinimalistBlockTrees

./: .gitmodules  CMakeLists.txt  README.md
executables/: CMakeLists.txt  main.cpp
includes/blocktree.utils/: HashString.h  RabinKarp.h
includes/compressed/: CBitBlockTree.h  CBlockTree.h
includes/pointer_based/: BlockTree.h
includes/pointer_based/blocks/: BackBlock.h  Block.h  InternalBlock.h  LeafBlock.h
src/: CMakeLists.txt
src/compressed/: CBitBlockTree.cpp  CBlockTree.cpp
src/pointer_based/: BlockTree.cpp
src/pointer_based/blocks/: BackBlock.cpp  Block.cpp  InternalBlock.cpp  LeafBlock.cpp
src/utils/: HashString.cpp  RabinKarp.cpp
tests/: CMakeLists.txt  GTestFixture.cpp
tests/compressed/: CBitBlockTreeFixture.cpp  CBlockTreeFixture.cpp  CMakeLists.txt
tests/pointer_based/: BlockTreeBasicPropertiesFixture.cpp  BlockTreeFixture.cpp  BlockTreeWithoutCleanningFixture.cpp  CMakeLists.txt  HeuristicBlockTreeFixture.cpp
